From d6090ea (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Import primary_beams module
(*) In member function beam3Dvol() of class ClosurePhaseDelaySpectrum,
fix bug in computation of analytic power pattern

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), pass telecope orientation
as a numpy array in call to function airy_disk_pattern()

From 892760b (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, add
ability to handle when LST binning is not requested or if there is
only one LST.
(*) In member function subsample_differencing() of class ClosurePhase, 
add ability to handle when LST binning is not requested or if there is
only one LST.

From 6d211aa (noise):
====================

In examples/simparms/replicatesim.yaml,

(*) Add input parameters eff_aprtr and eff_Q
(*) Change default value of Trx to 162 K from 50 K

In scripts/replicate_sim.py,

(*) Accept input parameters eff_aprtr and eff_Q from the YAML file
with template in examples/simparms/replicatesim.yaml

From 58b3903 (pyuvsim):
======================

In scripts/altsim_interface.py,

(*) In function simparms_from_pyuvsim_to_prisim(), change some
defaults, and fix some parameters

From 0d3c19c (noise):
====================

In examples/simparms/defaultparms.yaml,

(*) Add parameters eff_aprtr (for aperture efficiency), and eff_Q
(quantization efficiency) for enabling better estimates of thermal
noise RMS

In scripts/run_prisim.py,

(*) Read and process eff_aprtr, and eff_Q parameters from the input
YAML file and pass appropriate values while creating instances of
class InterferometerArray.

From fd82446 (master):
=====================

In prisim/interferometry.py,

(*) In function thermalNoiseRMS(), revise RMS calculation by removing
the factor 2 inside square root to account for a complex-valued rms